# CARE-PD

./: .gitignore  README.md  pyproject.toml
thesis/: README.md  all_patients_distribution.pkl  dataloader.py  eda.py  evaluation_metrics.py  flow_matching_stgcn.pth  generated_PD_walk.npz  load_severity_labels.py  model.py  patient_007_distribution.pkl  pd_gam_labels.json  sample.py  script.py  train.py
